force-app/main/default/objects/LLC_BI__Document_Store__c/fields/LLC_BI__Is_External__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_External__c</fullName>
    <description>This field is optional and auto-populates. This field indicates that the file associated with this document store is not stored in Salesforce and is stored in an external system.</description>
    <formula>AND(IF(ISPICKVAL(LLC_BI__Type__c, &apos;Salesforce Attachment&apos;),false,true),NOT(ISPICKVAL(LLC_BI__Type__c, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is External</label>
    <type>Checkbox</type>
</CustomField>