force-app/main/default/objects/LLC_BI__Document_Store__c/fields/LLC_BI__Offline_Location__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Offline_Location__c</fullName>
    <description>This field is not required and used in classic Document Manager. It is a text field where additional information about the storage location can be provided.</description>
    <label>Offline Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>