force-app/main/default/objects/LLC_BI__Document_Store__c/fields/NDOC__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and auto-populates. This field indicates that the file associated with this document store has been permanently deleted.</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>